--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -71,7 +71,7 @@
     width: 100%;
     height: 4rem;
     gap: 1rem;
-    
+
 }
 .parrent-option{
     display: flex;
@@ -197,7 +197,7 @@
     width: 100%;
 }
 .double-chart .panel:nth-child(2){
-    width: 60%; 
+    width: 60%;
     margin-left: 0;
 }
 .child:hover{
@@ -206,4 +206,20 @@
 }
 .child:active{
     background-color: #299efe;
+}
+
+.header-button-panels{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-button-panels button{
+    border: 0.2rem solid rgb(0, 174, 0);
+    padding: 0.2rem;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.header-button-panels button:hover{
+    border: 0.2rem solid rgb(0, 233, 0);
 }
