--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -252,3 +252,36 @@ body.dark-theme .aside-option i.fa-circle-plus:hover {
 .custom-table tbody tr td:last-child button:hover {
     filter: brightness(0.8);
 }
+
+
+/* .. */
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pagination button {
+  padding: 0.375rem 0.75rem;
+  background-color: #ddd;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+.pagination button:disabled {
+  opacity: 0.5;
+  cursor: default;
+}
+
+/* sr bar */
+
+.search-bar {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 0.75rem;
+  border-radius: 0.25rem;
+  border: 1px solid #ccc;
+}
+
+/* .. */
