--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -506,7 +506,12 @@ header.topbar {
     padding: var(--s);
     border: var(--s) solid transparent;
     box-sizing: border-box;
-    background: #ff9f46;
+    background: linear-gradient(
+        12deg,
+        rgba(243, 120, 35, 1) 0%,
+        rgba(255, 147, 46, 1) 81%,
+        rgba(255, 123, 0, 1) 100%
+    );
     border-radius: calc(3.5 * var(--s));
     mask:
         radial-gradient(calc(sqrt(2) * var(--s)), #000 calc(100% - 1px), #0000),
